# glr

./: .gitmodules  CMakeLists.txt
examples/test/src/: main.cpp
include/glr/: glr.hpp
include/glr/core/: camera.hpp  mesh.hpp
src/: camera.cpp  mesh.cpp
